istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: /apache
    route:
    - destination:
        host: apache
        port:
          number: 80
  - match:
    - uri:
        prefix: /catalog
    route:
    - destination:
        host: catalog
        port:
          number: 8080
  - match:
    - uri:
        prefix: /customer
    route:
    - destination:
        host: customer
        port:
          number: 8080
  - match:
    - uri:
        prefix: /order
    route:
    - destination:
        host: order
        port:
          number: 8080
